--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
   Run-CI:
     runs-on: ubuntu-latest
     name: CI Runner
-    needs: [front-api-service, frontend-platforms]
+    needs: [ backend-api-service, frontend-platforms ]
     steps:
       - name: Run CI
         run: |
@@ -43,7 +43,7 @@ jobs:
             cd ${{ github.workspace }}/backend/$path && dotnet test --no-build --verbosity normal
             echo "Tests Finished for $path"
           done
-  front-api-service:
+  backend-api-service:
     runs-on: ubuntu-latest
     name: Front Api Validation & Build
     needs: [ test-CI ]
@@ -56,9 +56,9 @@ jobs:
           dotnet-quality: "preview"
       # build and compile
       - name: Restore dependencies
-        run: cd ${{ github.workspace }}/backend/Services/FrontApi && dotnet restore
+        run: cd ${{ github.workspace }}/backend/Services/Backend && dotnet restore
       - name: Build
-        run: cd ${{ github.workspace }}/backend/Services/FrontApi && dotnet build --no-restore
+        run: cd ${{ github.workspace }}/backend/Services/Backend && dotnet build --no-restore
   node-setup:
     runs-on: ubuntu-latest
     name: Setup Node
