--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,21 @@ name: Main CI
 
 on:
   push:
-    branches: ["main"]
+    branches: [ master ]
+    paths-ignore:
+      - '**/*.md'
+      - '**/*.gitignore'
+      - '**/*.gitattributes'
+  pull_request:
+    branches: [ master ]
+  workflow_dispatch:
+permissions:
+  contents: read
+
+env:
+  DOTNET_NOLOGO: true                     # Disable the .NET logo
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true # Disable the .NET first time experience
+  DOTNET_CLI_TELEMETRY_OPTOUT: true       # Disable sending .NET CLI telemetry
 
 jobs:
   Run-CI:
@@ -17,10 +31,9 @@ jobs:
         run: |
           echo "CI is running"
   
-  
-  backend-test-CI:
+  projects-test-CI:
     runs-on: ubuntu-latest
-    name: Backend Test Runner
+    name: Projects Test Runner
     strategy:
       matrix:
         projectPaths:
@@ -44,10 +57,60 @@ jobs:
             cd ${{ github.workspace }}/backend/$path && dotnet test --no-build --verbosity normal
             echo "Tests Finished for $path"
           done
+
+  client-dashboard-platform:
+    runs-on: ubuntu-latest
+    name: Client Dashboard Validation & Build
+    needs: [ projects-test-CI ]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 8
+          dotnet-quality: "preview"
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'microsoft'
+          java-version: '21'
+
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1.1
+        with:
+          vs-prerelease: true
+      - name: Install MAUI Workloads
+        run: |
+          dotnet workload install android --ignore-failed-sources
+          dotnet workload install maui --ignore-failed-sources
+      # build and compile
+      - name: Restore dependencies
+        run: cd ${{ github.workspace }}/backend/Clients/Dashboard && dotnet restore
+      - name: Build Android
+        run: cd ${{ github.workspace }}/backend/Clients/Dashboard && dotnet build -c Release -f net8.0-android --no-restore
+      - name: Upload Android Artifact
+        uses: actions/upload-artifact@v2.3.1
+        with:
+          name: android-ci-build
+          path: ${{ github.workspace }}/backend/Clients/Dashboard/bin/Release/*-android/*Signed.a*
+      - name: Build IOS
+        run: cd ${{ github.workspace }}/backend/Clients/Dashboard && dotnet build -c Release -f net8.0-android --no-restore
+      - name: Upload iOS Artifact
+        uses: actions/upload-artifact@v2.3.1
+        with:
+          name: ios-ci-build
+          path: ${{ github.workspace }}/backend/Clients/Dashboard/bin/Release/*-ios/**/*.app/
+      - name: Build Windows
+        run: cd ${{ github.workspace }}/backend/Clients/Dashboard && msbuild Dashboard.csproj -r -p:Configuration=Release -p:RestorePackages=false /p:GenerateAppxPackageOnBuild=true
+      - name: Upload Windows Artifact
+        uses: actions/upload-artifact@v2.3.1
+        with:
+          name: windows-ci-build
+          path: ${{ github.workspace }}/backend/Clients/Dashboard/bin/Release/*-windows*/**/Dashboard*.msix
   backend-api-service:
     runs-on: ubuntu-latest
     name: Front Api Validation & Build
-    needs: [ backend-test-CI ]
+    needs: [ projects-test-CI ]
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET
