--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,19 @@ jobs:
         uses: microsoft/setup-msbuild@v1.1
         with:
           vs-prerelease: true
+      - name: Install MAUI Workloads
+        run: |
+          dotnet workload install maui --ignore-failed-sources
+          dotnet workload install maui-desktop --ignore-failed-sources
+
+      - name: Build Windows
+        run: cd ${{ github.workspace }}/backend/Clients/Dashboard && msbuild -r -p:Configuration=Release -p:TargetFramework=net8.0-windows10.0.19041 -p:RestorePackages=false /p:GenerateAppxPackageOnBuild=true
+      - name: Upload Windows Artifact
+        if: github.event.workflow_run.event != 'pull_request'
+        uses: actions/upload-artifact@v2.3.1
+        with:
+          name: mac-ci-build
+          path: ${{ github.workspace }}/backend/Clients/Dashboard/bin/Release/*-windows*/**/Dashboard*.msix
   client-dashboard-platform:
     runs-on: macos-11
     name: Client Dashboard Build Android, iOS, MAC
