--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
         if: github.event.workflow_run.event != 'pull_request'
         uses: actions/upload-artifact@v2.3.1
         with:
-          name: mac-ci-build
+          name: window-ci-build
           path: ${{ github.workspace }}/backend/Clients/Dashboard/bin/Release/*-windows*/**/Dashboard*.msix
   client-dashboard-platform:
     runs-on: macos-latest
