--- a/backend/Clients/Dashboard/Dashboard.csproj
+++ b/backend/Clients/Dashboard/Dashboard.csproj
@@ -40,7 +40,7 @@
 
     <ItemGroup>
         <!-- App Icon -->
-        <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4"/>
+        <MauiIcon Include="Resources\appicon.svg" ForegroundFile="Resources\appiconfg.svg" Color="#252836"/>
 
         <!-- Splash Screen -->
         <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128"/>
@@ -62,6 +62,13 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-rc.2.23479.6"/>
     </ItemGroup>
+
+    <!--    <ItemGroup>-->
+    <!--      <MauiIcon Include="Resources\appicon.svg">-->
+    <!--        <ForegroundFile>Resources/appiconfg.svg</ForegroundFile>-->
+    <!--        <Color>#512BD4</Color>-->
+    <!--      </MauiIcon>-->
+    <!--    </ItemGroup>-->
 
     <!-- Build Properties must be defined within these property groups to ensure successful publishing
          to the Mac App Store. See: https://aka.ms/maui-publish-app-store#define-build-properties-in-your-project-file -->
