--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,6 @@ env:
 jobs:
   projects-test-CI:
     runs-on: ubuntu-latest
-    needs: [ backend-api-service ]
     name: Projects Test Runner
     strategy:
       matrix:
@@ -51,6 +50,7 @@ jobs:
           done
   backend-api-service:
     runs-on: ubuntu-latest
+    needs: [ projects-test-CI , frontend-platforms ]
     name: Backend Api Validation & Build
     steps:
       - name: Checkout
@@ -67,7 +67,41 @@ jobs:
         run: cd ${{ github.workspace }}/backend/Services/BackendApi && dotnet restore
       - name: Build
         run: cd ${{ github.workspace }}/backend/Services/BackendApi && dotnet build --no-restore
+  
   frontend-platforms:
+    name: Frontend Platforms & Build
+    needs: [ frontend-platforms-test-CI ]
+    runs-on: macos-latest
+    permissions:
+      contents: "read"
+      actions: "read"
+    strategy:
+      matrix:
+        projectPaths:
+          - "clientFront"
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+      - name: Build And Test Frontend Clients
+        run: |
+          for path in ${{ join( matrix.projectPaths , ' ')}} }}; do
+            echo "Tests Start for $path"
+            cd ${{ github.workspace }}/frontend/$path && flutter pub get
+            cd ${{ github.workspace }}/frontend/$path && flutter build appbundle
+            cd ${{ github.workspace }}/frontend/$path && flutter build apk
+            cd ${{ github.workspace }}/frontend/$path && flutter build ios --release --no-codesign
+            cd ${{ github.workspace }}/frontend/$path && flutter build web
+            echo "Tests Finished for $path"
+          done
+  frontend-platforms-test-CI:
     name: Frontend Platforms & Build
     runs-on: macos-latest
     permissions:
@@ -94,9 +128,5 @@ jobs:
             echo "Tests Start for $path"
             cd ${{ github.workspace }}/frontend/$path && flutter pub get
             cd ${{ github.workspace }}/frontend/$path && flutter test
-            cd ${{ github.workspace }}/frontend/$path && flutter build appbundle
-            cd ${{ github.workspace }}/frontend/$path && flutter build apk
-            cd ${{ github.workspace }}/frontend/$path && flutter build ios --release --no-codesign
-            cd ${{ github.workspace }}/frontend/$path && flutter build web
             echo "Tests Finished for $path"
           done
